# namic-sandbox

./: CMakeLists.txt  OpenIGTLinkConfigPlatform.cmake  README.txt  igtlConfigure.h.in
4DUltrasound/: 4DUltrasoundConfigure.h.in  CMakeLists.txt  CMakeOptions.cmake  CalibrationFile.txt  SynchroGrabConfigure.h.in
AngularInterpolationForDWI/: CMakeLists.txt  DWISmoothing.cxx
BRAINSFitVT/: BRAINSFitBSpline.h  BRAINSFitPrimary.xml  BRAINSFitTest.cxx  BRAINSFitVT.s3ext  CMakeLists.txt  CenterOfBrain.cxx  CenterOfBrain.h  README  itkMultiModal3DMutualRegistrationHelper.txx
BSplineDeformableTransformCachingTest/: CMakeLists.txt  MattesMetricCachingTest.cxx  itkMattesMutualInformationImageToImageMetric2.txx
BayesianSegmentationModule/: BayesianClassifierInitializer.cxx  BayesianSegmentation.cxx  CMakeLists.txt  Histogram.cxx  KnowledgeBasedSegmentation.cxx  TODO.txt  flowchart.vsd  itkBayesianClassificationImageFilterTest.cxx  itkBayesianClassifierImageFilter.h  itkBayesianClassifierImageFilter.txx  itkBayesianClassifierImageFilterTest.cxx  itkBayesianClassifierInitializationImageFilter.h  itkBayesianClassifierInitializationImageFilter.txx  itkBayesianClassifierInitializationImageFilterTest.cxx  itkHistogramDensityFunction.h  itkHistogramDensityFunction.txx  itkImageCastVectorIndexSelectionFilter.h  itkImageToListGenerator.h  itkImageToListGenerator.txx  itkImageToListGeneratorTest.cxx  itkScalarImageKmeansImageFilterWithMask.txx  vtkITKBayesianClassificationImageFilterTest.h  vtkITKBayesianClassifierInitializationImageFilterFF2D.cxx  vtkITKBayesianClassifierInitializationImageFilterFF2D.h
CNMCRFA/: CMakeLists.txt  RFAPlanner.cxx  RFAPlanner.xml
CUDA-ITK/: CMakeLists.txt
CommandLineAPI/: CLPExample1.cxx  CLRegistration.cxx  CLRegistration.xml  CMakeLists.txt  GenerateCLP.clp  GenerateCLP.cxx  GenerateCLP.xml  Slicer3Example.cxx  XMLHelp.h
HardiRsh/: CMakeLists.txt
ITKStatisticsPipelineRefactoring/: CMakeLists.txt
ImageIOStreaming/: CMakeLists.txt
ImageNetworkReader/: CMakeLists.txt  ImageNetworkReaderTest.cxx  itkImageNetworkReader.h  itkImageNetworkReader.txx
JPEG2000ImageIO/: CMakeLists.txt
JointRegistrationSegmentation/: CMakeLists.txt  ImageRegistrationTest.cxx  itkCenteredTransformMomentsInitializer.txx  itkExpectationMaximizationImageClassification.h  itkExpectationMaximizationImageClassification.txx  itkExpectationMaximizationImageClassificationTest.cxx  itkExpectationMaximizationImageClassificationWithPriors.h  itkExpectationMaximizationImageClassificationWithPriors.txx  itkImageToImageMetric.h  itkImageToImageMetric2.h  itkImageToImageWithGradientMetric.h  itkJointRegistrationSegmentationAlgorithm.h  itkJointRegistrationSegmentationAlgorithm.txx  itkJointRegistrationSegmentationAlgorithmTest.cxx  itkKullbackLeiblerDivergenceImageToImageMetric.txx  itkMRIInhomogeneityEstimator.h  itkMRIInhomogeneityEstimator.txx  itkVectorAtlasRegistrationMethod.h  itkVectorAtlasRegistrationMethod.txx
LegoIGSTK/: CMakeLists.txt  CTestConfig.cmake
LegoTutorial/: CMakeLists.txt  NXT_USB.h  NXT_USB_linux.cxx  NXT_USB_linux.h  vtkLegoGUI.cxx  vtkLegoGUI.h  vtkLegoLogic.cxx
LevelSetBasedCellSegmentation/: CMakeLists.txt
ModularLevelSets/: CMakeLists.txt  itkFastAnisotropicChamferDistanceImageFilter.h  itkLevelSetCurvatureTerm.h  itkLevelSetDerivativesTerm.h  itkLevelSetHessianTerm.h  itkLevelSetPropagationTerm.h  itkLevelSetTerm.h  itkLevelSetThresholdTerm.h  itkModularLevelSetFunction.txx  itkModularLevelSetImageFilter.txx
MultiImageRegistration/: CMakeLists.txt  CongealingSampleScript.txt  CongealingSampleScriptWithAllParameters.txt  MultiImageRegistrationConfig.cmake.in  MultiImageRegistrationLauncher.c.in  README.txt  SourceGuide.txt  UseMultiImageRegistration.cmake.in  parameters.init
NonRigidRegistrationForEchoPlanarImaging/: BSplineRegistration.cxx  CMakeLists.txt  CommandIterationUpdate.h  CommandStopUpdate.h  DicomSeriesReadImageWrite.cxx  ImageResamplingCommand.cxx  MultiModalityAffineRegistrationCommand.cxx  MultiModalityRigidRegistration.cxx  MultiModalityRigidRegistration.h  MultiModalityRigidRegistrationCommand.cxx  OrientImageFilter.cxx
NrrdDWITensorReconstruction/: CMakeLists.txt  ReconstructTensor.cxx  itkSymmetricSecondRankTensorReconstructionImageFilter.h  itkSymmetricSecondRankTensorReconstructionImageFilter.txx
OpenIGTLink/: CMakeLists.txt  GenerateOpenIGTLinkConfig.cmake  OpenIGTLinkConfig.cmake.in  OpenIGTLinkConfigPlatform.cmake  igtlConfigure.h.in  igtl_typeconfig.h.in
OpenIGTjhu/: CMakeLists.txt  _version_0_9  sanitize
Poistats/: AsymmetricTensorReaderStrategy.cxx  AsymmetricTensorVectorReaderStrategy.cxx  CMakeLists.txt  CommandUpdate.cxx  CommandUpdate.h  PoistatsCLI.cxx  PoistatsCLI.xml  PoistatsReplica.h  PoistatsReplicas.h  itkBSplineKernelFunction.h  itkBSplineKernelFunction.txx  itkMGHImageIO.cxx  itkMGHImageIO.h  itkPoistatsFilter.h  itkPoistatsFilter.txx  poistats.cpp
ProstateFEMSupportTools/: AssessOverlap.cxx  CMakeLists.txt  CalculateDisplDiff.cxx  PrepareAbaqusInputMultiTissue.cxx  ProstateRegionIdentifier.cxx  imageMeshResampler.cxx  imageMeshResamplerAffine.cxx  itkTetrahedralMeshReader.h  mesher-reader.cxx  prostateAddVolDispl.cxx  svn-commit.3.tmp
Qdec/: CMakeLists.txt  Makefile  QdecCmd.cpp  QdecContrast.h  QdecDataTable.cpp  QdecDataTable.h  QdecFactor.h  QdecGlmDesign.cpp  QdecGlmFitResults.h  QdecProject.h  QdecSubject.h  QdecUtilities.cpp  QdecUtilities.h  example_output.txt  vtkQdec.h  vtkQdecWin32Header.h
QuatitativeFiberTractAnalysis/: CMakeLists.txt  Dartmouth2nrrd.cxx  VTK2Fib.cxx  itkNormalizedCut.h  itkNormalizedCut.txx  itkTubeSpatialObjectToDistanceFilter.h
RefactoringITKStatisticsClasses/: CMakeLists.txt
SNRMRRobotController/: CMakeLists.txt  INSTALL  Makefile  MrsvMessage.h  MrsvrCommand.h  MrsvrDev.cpp  MrsvrDev.h  MrsvrLocatorClient.cpp  MrsvrLog.cpp  MrsvrMainWindow.cpp  MrsvrMainWindow.h  MrsvrMessageServer.cpp  MrsvrMessageServer.h  MrsvrMrtsCon.cpp  MrsvrMrtsCon.h  MrsvrNavigationDialog.cpp  MrsvrNavigationDialog.h  MrsvrPlotCanvas.h  MrsvrRAS.cpp  MrsvrSharedData.cpp  MrsvrSharedData.h  (+10 more)
(+13400 files in other folders)
