PROJECT(DWISmoothing)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
  MESSAGE(FATAL_ERROR
    "ITK not found.  Please set ITK_DIR.")
ENDIF(ITK_FOUND)

INCLUDE (${CMAKE_ROOT}/Modules/FindVTK.cmake)
IF (USE_VTK_FILE)
  INCLUDE(${USE_VTK_FILE})
ENDIF (USE_VTK_FILE)

ADD_EXECUTABLE(DWISmoothing DWISmoothing.cxx)
TARGET_LINK_LIBRARIES(DWISmoothing ITKCommon ITKNumerics ITKNrrdIO ITKIO vtkIO vtkCommon vtkImaging vtkFiltering)

INSTALL_TARGETS ( /bin DWISmoothing )
